<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@color/white"
        android:orientation="horizontal"
        android:weightSum="5"
        android:layout_gravity="right"
        android:gravity="right"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        >
    <LinearLayout
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            >









    </LinearLayout>
<LinearLayout
        android:layout_width="0sp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="3"
        android:weightSum="7.5"

    >
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0sp"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:weightSum="3"
            android:background="@color/blue_inactive"
            >

        <TextView
                android:layout_marginRight="2dp"
                android:layout_width="0sp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:layout_gravity="right"
                android:gravity="right|center_vertical"
                android:text="test"

                android:id="@+id/tv_shop_item_title"
                />
        <TextView
                android:layout_width="0sp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:gravity="center"

                android:text="@string/product_name"
                />

    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0sp"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:weightSum="3"
            android:background="#C6E0F4"
            >
        <TextView
                android:layout_width="0sp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:layout_gravity="right"
                android:gravity="right|center_vertical"
                android:id="@+id/tv_shop_item_price"
                android:text="قیمت:"
                />

        <TextView
                android:layout_width="0sp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_gravity="right"
                android:gravity="right|center_vertical"
                android:layout_marginRight="3dp"
                android:text="@string/price"
                />


    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0sp"
            android:orientation="vertical"
            android:layout_weight="4"
            android:weightSum="4"

            >
        <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_gravity="right"
                android:gravity="center"
                android:text="@string/details"
                android:layout_marginRight="3dp"
                />
        <TextView
                android:id="@+id/tv_shop_item_description"
                android:layout_width="match_parent"
                android:layout_height="0sp"
                android:layout_weight="4"
                android:textSize="14dp"
                android:layout_gravity="center"
                android:gravity="center|top"
                android:text="test"
                android:layout_marginRight="3dp"
                />
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0sp"
            android:orientation="horizontal"
            android:layout_weight="1.5"
            android:weightSum="1"

            >
        <LinearLayout
                android:orientation="vertical"

                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:layout_gravity="center|top"
                android:gravity="center|top"

                android:layout_weight="1">

            <Button
                    android:id="@+id/bt_shop_item"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padd_10"
                    android:background="@drawable/btn_blue_selector"
                    android:layout_marginBottom="5dp"
                    android:layout_marginRight="@dimen/padd_10"
                    android:layout_marginLeft="@dimen/padd_10"
                    android:orientation="horizontal"
                    android:clickable="true"
                    android:text="@string/buy"


                    android:textColor="@color/md_white_1000"
                    android:focusable="true"
                    android:layout_gravity="center"
                    android:gravity="center"
                    />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>

    <LinearLayout
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="2"
            android:weightSum="5"
            >





        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="0sp"
                android:src="@drawable/a1"
                android:scaleType="fitXY"
                android:layout_weight="5"
                android:id="@+id/iv_shop_item"

                />
    </LinearLayout>


</LinearLayout>
